--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -49,7 +49,7 @@ jobs:
           ./ci/run_dbt.sh
           mkdir target/images
 
-      - name: 'Render images'
+      - name: 'Render images and save docs'
         run: |
           export POSTGRES_HOSTNAME=${{ env.POSTGRES_HOSTNAME }}
           export POSTGRES_USERNAME=${{ env.POSTGRES_USERNAME }}
@@ -64,12 +64,12 @@ jobs:
         run: |
           mkdir -p ./pr
           echo ${{ github.event.number }} > ./pr/NR
+          
       - uses: actions/upload-artifact@v2
         with:
           name: pr
           path: pr/
 
-      - name: Save docs
       - uses: actions/upload-artifact@v2
         with:
           name: docs
