--- a/.github/workflows/publish_pr_artifacts.yaml
+++ b/.github/workflows/publish_pr_artifacts.yaml
@@ -95,7 +95,7 @@ jobs:
         uses: actions/github-script@v3.1.0
         with:
           script: |
-            console.log(github.event);
+            console.log(${{github.event.workflow_run }});
             var fs = require('fs');
             var artifacts = await github.actions.listWorkflowRunArtifacts({
                owner: context.repo.owner,
